--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ScrollingImageGallery</string>
     <string name="gallery_image">Gallery Image</string>
+    <string name="toolbar_title">Scrolling Image Gallery</string>
 </resources>
