--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="error_message">There is an error loading images. Please try again later</string>
     <string name="images_per_page">Images per page</string>
     <string name="apply">Apply</string>
+    <string name="save">Save</string>
 </resources>
